Forced command input to lowercase and prevented overflow hidden

--- a/src/components/CommandInput/command_input_style.css
+++ b/src/components/CommandInput/command_input_style.css
@@ -8,6 +8,8 @@
   margin-left: .5rem;
   background-color: transparent;
   border-width: 0px;
+  width: 80vw;
+  text-transform: lowercase;
 }
 
 #input_command:focus {
